<resources>
    <string name="app_name">Super Awesome Calculator</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="_0">0</string>
    <string name="clr">CLR</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
</resources>